--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,19 +1,20 @@
-FROM node:alpine as builder
-
-WORKDIR /usr/app
+FROM node:alpine as build-deps
+WORKDIR /usr/src/app
 
 COPY package.json yarn.lock ./
 
 RUN yarn
 
-COPY . .
+COPY . ./
 
-CMD  ["yarn", "build"]
+RUN yarn build
 
 FROM nginx:alpine
+
+WORKDIR /usr/share/nginx/html
 
 EXPOSE 3000
 
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 
-COPY --from=builder /usr/app/build /usr/share/nginx/html
+COPY --from=build-deps /usr/src/app/build ./
